# Python-30-Lectures

advanced/: built_in_funcs.py  decorators.py
advanced/my-site/: main.py
advanced/scopes_LEGB/: main_file.py  not_main.py
advanced/scopes_LEGB/crud/: crud.py
advanced/scopes_LEGB/users/: models.py  users.py
advanced/work_with_csv/: laptops.csv  main.py
advanced/work_with_files/: ex2  main.py
advanced/work_with_json/: db.json  index.html  index.js  laptops.json  main.py
basics/: comprehensions.py  data_types.py  dictionaries.py  functions.py  if_else.py  integers.py  linux_commands.md  lists_and_loops.py  loops.py  strings.py  try_except.py  tuples_and_sets.py
basics/my_project/: main.py  test_user_system.py
new_project/: pyproject.toml
oop/: intro.py
parsing/: index.html  main.py  max_kg_parser.py  requirements.txt
poetry_project/: pyproject.toml
projects/basic-crud/: main.py  test.py
repeating/: first_interview.py
