[tool.poetry]
name = "new-project"
version = "0.1.0"
description = ""
authors = ["TimaDootaliev <timur.dootaliev.td@gmail.com>"]
readme = "README.md"
packages = [{include = "new_project"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
