[tool.poetry]
name = "poetry-project"
version = "0.1.0"
description = ""
authors = ["TimaDootaliev <timur.dootaliev.td@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_project"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
